重要特性更新
重要特性更新，支持多模版化

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-godzilla",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "godzilla is to help front-end engineers to quickly construct the project engineering tool generates based yeoman",
   "license": [
     {
@@ -28,12 +28,13 @@
     "app"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "generator-godzilla"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.17.0",
+    "yeoman-generator": "^0.18.4",
     "chalk": "^0.5.0",
-    "yosay": "^0.3.0"
+    "yosay": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "*"
